[package]
name = "load-s3-agent"
version = "0.3.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bundles_rs = { git = "https://github.com/loadnetwork/bundles-rs.git", branch = "main"}
dotenvy = "0.15.7"
reqwest = { version = "0.12.23", features = ["json"] }
aws-config = { version= "1.8.3", features = ["behavior-version-latest"] }
aws-sdk-s3= { version = "1.100.0", features = ["rt-tokio"] }
anyhow = "1.0.99"
serde_json = "1.0.142"
serde = "1.0.219"
tokio = {version = "1.47.1", features = ["full"] }
axum-extra = { version = "0.10.1", features = ["multipart"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "limit"] }
headers = "0.4.1"
futures = "0.3.31"
tokio-util = "0.7.16"
